@@ -1,3 +1,4 @@
+- 2021-01-15: Update to AirConnect v0.2.43.1
 - 2021-01-13: Update to AirConnect v0.2.43.0
 - 2020-12-16: Update to AirConnect v0.2.42.1
 - 2020-12-13: Update to AirConnect v0.2.41.2
